--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: 晨曦的博客
-description: "点点滴滴"
+title: ZFX的博客
+description: "向着目标前进，加油"
 header-img: "/img/home-bg.jpg"
 ---
 
