--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: "About Me"
-description: "FB Zhang"
+description: "ZFX"
 ---
 
 <!-- Post Header -->
@@ -49,41 +49,16 @@ description: "FB Zhang"
                 col-md-10 col-md-offset-1
                 post-container">
 
-<h2 id="section-1">Hello World!</h2>
+<h2 id="section-1">你好呀</h2>
 
-<p>搭建这个博客的目的是将自己在学习代码过程中的一些心得、经验分享到这里，主要为了方便自己以后查阅，也欢迎大家提出宝贵意见。</p>
+<p>本博客志在分享自己的学习资料和学习的难点及知识点。如有错误的地方希望可以指正，谢谢。</p>
 {% if site.WeChatPublic %}
 <p><img src='{{ site.WeChatPublic }}' alt="微信公众号" align="center"></p>
-<p align="center">这是我的微信公众号，不定时更新一些文章，大家可以关注一下。</p>
+<p align="center">欢迎关注我的微信公众号</p>
 {% endif %}
 <h2 id="section-2">关于本博客</h2>
 
-<p>本博客除商业转载外，不需要申请授权，但请务必遵守 <strong><em><a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">(CC) BY-NC-SA 4.0</a></em></strong> 协议，内容如下：</p>
-<div class="cc_item">
-    <div class="cc_label"><strong>署名</strong></div>
-    <div class="cc_text">您必须给出适当的署名，提供指向本许可协议的链接，同时标明是否（对原始作品）作了修改。您可以用任何合理的方式来署名，但是不得以任何方式暗示许可人为您或您的使用背书。</div>
-</div>
-<div class="cc_item">
-    <div class="cc_label"><strong>非商业性使用</strong></div>
-    <div class="cc_text">您不得将本作品用于商业目的。</div>
-</div>
-<div class="cc_item">
-    <div class="cc_label"><strong>相同方式共享</strong></div>
-    <div class="cc_text">如果您再混合、转换或者基于本作品进行创作，您必须基于与原先许可协议相同的许可协议 分发您贡献的作品。</div>
-</div>
-<div class="cc_item">
-    <div class="cc_label"><strong>没有附加限制</strong></div>
-    <div class="cc_text">您不得适用法律术语或者技术措施从而限制其他人做许可协议允许的事情。</div>
-</div>
-<p>只要你遵守许可协议条款，你可以自由地：</p>
-<div class="cc_item">
-    <div class="cc_label"><strong>共享</strong></div>
-    <div class="cc_text">在任何媒介以任何形式复制、发行本作品</div>
-</div>
-<div class="cc_item">
-    <div class="cc_label"><strong>演绎</strong></div>
-    <div class="cc_text">修改、转换或以本作品为基础进行创作</div>
-</div>
+<p>转载本博客请标明出处！</p>
 
              {% if site.disqus %}
              <!-- disqus 评论框 start -->
