删除评论框

--- a/about.html
+++ b/about.html
@@ -59,15 +59,15 @@ description: "ZFX"
 <h2 id="section-2">关于本博客</h2>
 
 <p>转载本博客请标明出处！</p>
-
+<!--
              {% if site.disqus %}
-             <!-- disqus 评论框 start -->
+              disqus 评论框 start -- >
               <div class="comment">
                   <div id="disqus_thread" class="disqus-thread"></div>
               </div>
-              <!-- disqus 评论框 end -->
+              < !-- disqus 评论框 end 
               {% endif %}
-
+-->
             </div>
         </div>
     </div>
