添加赞赏码

--- a/about.html
+++ b/about.html
@@ -55,7 +55,10 @@ description: "ZFX"
 {% if site.WeChatPublic %}
 <p><img src='{{ site.WeChatPublic }}' alt="微信公众号" align="center"></p>
 <p align="center">欢迎关注我的微信公众号</p>
+<p><img src="{{ site.zfb_pay }}" alt="支付宝赞赏" align="center"><img src="{{ site.wx_pay }}" alt="微信赞赏" align="center"></p>
+<p align="center">如果觉得本博客有帮到您的地方可以赞赏一下，非常感谢！</p>
 {% endif %}
+
 <h2 id="section-2">关于本博客</h2>
 
 <p>转载本博客请标明出处！</p>
