修改赞赏码位置

--- a/about.html
+++ b/about.html
@@ -55,7 +55,16 @@ description: "ZFX"
 {% if site.WeChatPublic %}
 <p><img src='{{ site.WeChatPublic }}' alt="微信公众号" align="center"></p>
 <p align="center">欢迎关注我的微信公众号</p>
-<p><img src="{{ site.zfb_pay }}" alt="支付宝赞赏" align="center"><img src="{{ site.wx_pay }}" alt="微信赞赏" align="center"></p>
+<table align="center" border="2">
+    <tr>
+        <th>
+            <img src="{{ site.zfb_pay }}" alt="支付宝赞赏">
+        </th>
+        <th>
+            <img src="{{ site.wx_pay }}" alt="微信赞赏">
+        </th>
+    </tr>
+</table>
 <p align="center">如果觉得本博客有帮到您的地方可以赞赏一下，非常感谢！</p>
 {% endif %}
 
