--- a/lovetree.html
+++ b/lovetree.html
@@ -66,18 +66,16 @@
                     <span class="say">// code
 						<span class="say"> </span>
                     <br>
-                    <span class="say"><span class="space"></span> -- ZFB--</span>
+                    <span class="say"><span class="space"></span> -- ZFX--</span>
                 </div>
             </div>
             <div id="clock-box">
-                ZFB<span class="STYLE1">与</span>LM<span class="STYLE1">已经相识了</span>
+                ZFX<span class="STYLE1">已出生了</span>
                 <div id="clock"></div>
             </div>
             <canvas id="canvas" width="1100" height="680"></canvas>
         </div>
     </div>
-    <script>
-    </script>
     <script>
     (function() {
         var canvas = $('#canvas');
@@ -212,7 +210,7 @@
         var textAnimate = eval(Jscex.compile("async", function() {
             var together = new Date();
             //together.setFullYear(2012, 07, -15); //时间年月日
-	    together.setFullYear(2017, 06, -17); //时间年月日
+	    together.setFullYear(2002, 12, -5); //时间年月日
             together.setHours(0); //小时
             together.setMinutes(0); //分钟
             together.setSeconds(0); //秒前一位
