--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ header-img: "/img/home-bg.jpg"
 </div>
 <hr>
 {% endfor %}
-<script src="//cdn1.lncld.net/static/js/2.5.0/av-min.js"></script>
+<script src="https://unpkg.com/leancloud-storage@4.12.2/dist/av-min.js"></script>
 <script>
     AV.initialize("b6xbX21qO1uIQJAVuRHfOXQe-gzGzoHsz", "Dx4XP9hYgFhPhBsPEjf50Is0");
     var name='Counter';
