--- a/index.html
+++ b/index.html
@@ -30,9 +30,14 @@ header-img: "/img/home-bg.jpg"
 </div>
 <hr>
 {% endfor %}
-<script src="//cdn1.lncld.net/static/js/2.5.0/av-min.js"></script>
+<script src="//unpkg.com/leancloud-storage@4.12.2/dist/av-min.js"></script>
 <script>
     AV.initialize("b6xbX21qO1uIQJAVuRHfOXQe-gzGzoHsz", "Dx4XP9hYgFhPhBsPEjf50Is0");
+    AV.init({
+      appId: "b6xbX21qO1uIQJAVuRHfOXQe-gzGzoHsz",
+      appKey: "Dx4XP9hYgFhPhBsPEjf50Is0",
+      serverURL: "https://leancloud.zfx521.top"
+    });
     var name='Counter';
 
     function createRecord(Counter){
