--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ header-img: "/img/home-bg.jpg"
     AV.init({
       appId: "b6xbX21qO1uIQJAVuRHfOXQe-gzGzoHsz",
       appKey: "Dx4XP9hYgFhPhBsPEjf50Is0",
-      serverURL: "https://leancloud.zfx521.top"
+      serverURL: "https://leancloud.zfxkj.top"
     });
     var name='Counter';
 
