--- a/tags.html
+++ b/tags.html
@@ -40,7 +40,7 @@ header-img: "/img/tags-bg.jpg"
             <!-- 标签列表 -->
       {% for tag in site.tags %}
       <div class="one-tag-list">
-          <span class="fa-solid fa-tag fa-xl" id="{{ tag[0] }}">
+          <span class="fa-solid fa-tag" id="{{ tag[0] }}">
                     <span class="tag-text">{{ tag[0] }}</span>
                 </span>
         {% for post in tag[1] %}
