--- a/search.html
+++ b/search.html
@@ -1,47 +1,47 @@
 ---
 layout: default
-title: Search Results
+title: "Search Results"
+description: "记录日常生活工作中遇到的技术问题和解决方案"
 ---
 
 <!-- Post Header -->
 <style type="text/css">
-    header.intro-header{background-color: #4285f4;}
+  header.intro-header{background-color: #4285f4;}
 </style>
-
 <header class="intro-header" >
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                <div class="site-heading">
-                    <h1>{{ page.title }}</h1>
-                    <span class="subheading">{{ page.description }}</span>
-                </div>
-            </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+        <div class="site-heading">
+          <h1>{{ page.title }}</h1>
+          <span class="subheading">{{ page.description }}</span>
         </div>
+      </div>
     </div>
+  </div>
 </header>
 <div style="margin:0 auto;width:300px;height:80px;padding-top:10px;padding-bottom:10px"></div>
 <div class="container">
   <div class="row">
     <!-- Post Container -->
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 post-container">
-    
-<form action="/search" method="get">
-  <label for="search-box"></label>
-  <input type="text" id="bdcsMain" name="query" placeholder="输入关键词">
-</form>
-
+      <form target="_blank" id="search-form" action="https://bing.com/search" method="get" onsubmit="return new_submit();">
+        <label for="search-box"></label>
+        <input type="text" id="keyword" name="q" placeholder="输入关键词">
+      </form>
     </div>
   </div>
 </div>
 <script type="text/javascript">
-  (function(){
-    document.write(unescape('%3Cdiv id="bdcs"%3E%3C/div%3E'));
-    var bdcs = document.createElement('script');
-    bdcs.type = 'text/javascript';
-    bdcs.async = true;
-    bdcs.src = '//znsv.baidu.com/customer_search/api/js?sid=3813700824631061067' + '&plate_url=' + encodeURIComponent(window.location.href) + '&t=' + Math.ceil(new Date()/3600000);
-    var s = document.getElementsByTagName('script')[0];
-    s.parentNode.insertBefore(bdcs, s);})();
+  function new_submit(){
+    var search_form = document.getElementById("search-form");
+    var search = document.getElementById("keyword");
+    if (search.value == "") {
+      return false;
+    }
+    search.value = 'site:{{ site.domain }} ' + search.value;
+    search_form.submit();
+    search_form.reset();
+    return false;
+  }
 </script>
-
