--- a/search.html
+++ b/search.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: "Search Results"
+title: "站点检索"
 description: "记录日常生活工作中遇到的技术问题和解决方案"
 ---
 
@@ -20,7 +20,6 @@ description: "记录日常生活工作中遇到的技术问题和解决方案"
     </div>
   </div>
 </header>
-<div style="margin:0 auto;width:300px;height:80px;padding-top:10px;padding-bottom:10px"></div>
 <div class="container">
   <div class="row">
     <!-- Post Container -->
