修改文章底部文字颜色和莫名其妙的高度,添加注释,添加每日一言点击重新加载

--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@ description: "ZFX"
 ---
 
 <!-- Post Header -->
+<!-- 关于页面 -->
 <style type="text/css">
     header.intro-header{
         background-image: linear-gradient(to right top, rgba(255, 255, 255, .15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .15) 50%, rgba(255, 255, 255, .15));
