--- a/categories.html
+++ b/categories.html
@@ -5,6 +5,8 @@ description: "文章分类"
 header-img: "/img/categories-bg.jpg"
 ---
 
+<!-- 分类页面 -->
+
 <header class="intro-header" style="background-image: url('{{ site.BASE_PATH }}{% if page.header-img %}{{ page.header-img }}{% else %}{{ site.header-img }}{% endif %}')">
     <div class="container">
         <div class="row">
