--- a/archives.html
+++ b/archives.html
@@ -5,6 +5,8 @@ description: "记录日常生活工作中遇到的技术问题和解决方案"
 header-img: "/img/archives-bg.jpg"
 ---
 
+<!-- 归档页面 -->
+
 {%- for post in site.posts  -%}
   {%- capture this_year -%}{{ post.date | date: "%Y" }}{%- endcapture -%}
   {%- capture this_month -%}{{ post.date | date: "%B" }}{%- endcapture -%}
